[package]
name = "mock-service"
version = "0.1.0"
edition = "2021"

[dependencies]
restate-sdk = { version = "0.5.0" }
tokio = { version = "1.44", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.10.1"
async-trait = "0.1.88"
anyhow = "1.0.98"
thiserror = "2.0.12"
serde_yaml = "0.9.34"
clap = { version = "4.5.39", features = ["derive"] }
humantime = "2.2.0"
serde_with = "3.12.0"
